Fix two places with insufficient colour contrast
There are more places than this with insufficient colour contrast, but
this fixes the issue in two places:
- The author's name on the placeholder book covers (the ones shown when
  we can't get an image of the real cover)
- The line of welcome text telling you how many books you have on loan

--- a/app/assets/stylesheets/start.scss
+++ b/app/assets/stylesheets/start.scss
@@ -4,7 +4,7 @@
   .greeting {
     margin: 1rem;
 
-    span { color: #777; }
+    span { color: #737373; }
     h1, span { display: inline-block; margin: 0 0 0.25em; vertical-align: baseline; }
 
     @media (min-width: 825px){
